# smlm

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  Readme.md  pyproject.toml  requirements.txt  setup.py
chamfer_distance/: chamfer_distance.py
configs/: config.yaml  config_adapointr_bs8_lr0.01_schNone_test.yaml  config_demo_data.yaml  test_config.yaml
container/: simulation.def  training.def
dataset/: Dataset.py  PCNDataset.py  SMLMDataset.py  SMLMSimulator.py  SMLMSimulatorStats.py  ShapeNet.py  SimulatorDataset.py  shapenet.py
demo_data/tetrahedron_seed1121_train/aniso/: smlm_sample0.csv  smlm_sample1.csv  smlm_sample10.csv  smlm_sample100.csv  smlm_sample101.csv  (+495 more)
figures/: exp_data.py
graph_autoencoder/: config.py  dataset.py  exec.py  main.py  model.py  train.py
helpers/: chamfer.py  clustering.py  config.py  data.py  generate_config_files.py  logging.py  misc.py  nndistances.py  pc_stats.py  readers.py  visualization.py
model_architectures/: adaptive_folding.py  attention.py  chamfer_distance_updated.py  chamfer_distances.py  folding_net.py  losses.py  pcn.py  pcn_decoder.py  pocafoldas.py  pointnet_base.py  pointnet_classifier.py  pointnet_transform.py  pointr.py  snowflake_SPD.py  snowflake_loss_utils.py  snowflake_misc.py  snowflake_skip_transformer.py  snowflakenet.py  transformer_utils.py  transforms.py  utils.py
notebooks/: Graph Autoencoder.ipynb  PointNet.ipynb  PointNet_binary_classifier.ipynb  graph.html  network_comparison.ipynb  smlm_preprocessing.ipynb  visualization.ipynb
preprocessing/: preprocessing.py
resources/: highest_shape.csv  paths.txt
scripts/: config.py  config.yaml  drafts.py  get_pc_stats.py  interactive_plot.py  jrmpcfpflm.py  knn_graph_constr.py  main.py  npc_smlm_averaging.py  plot_for_paper.py  ply_to_npy.py  process_ply.py  quick_read.py  run_preprocessing.py  run_simulation.py  run_training.py  simulate_data.py  test.py  test_pcn.py  test_pocafoldas.py  train.py  train_pcn.py  train_pcn_.py  train_pcn_varying_size.py  train_pocafoldas.py  train_script_clean.py  train_snowflake.py  try_foldingnet_original.py  try_pcn_original.py
simulation/: simulate_data.py  simulate_dna_origami.py  simulate_suresim_data.py  simulate_with_custom_model.py
simulator/: simulate.py  simulate_data.py  simulator.py
tests/: test_helpers.py  test_scripts.py
tutorial/: Inference_and_visualization.ipynb  Intro_and_data_simulation.ipynb  Network_training.ipynb
(+1300 files in other folders)
