[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smlm-simulator"
version = "0.1"
description = "SMLM Simulator building on SuReSim"
authors = [
  { name = "Diana Mindroc" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1,<3",
  "plotly>=5.18,<6",
  "numpy>=1.26,<3",
  "scikit-image~=0.20.0",
  "pyyaml~=6.0",
  "torch==2.4.0",
  "torchvision==0.19.0",
  "torchaudio==2.4.0",
  "matplotlib~=3.7",
  "einops~=0.6",
  "imageio~=2.30",
  "timm~=0.9",
  "easydict~=1.1",
]

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]
