[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smlm-simulator"
version = "0.1"
description = "SMLM Simulator building on SuReSim"
authors = [
  { name = "Diana Mindroc" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.1.4",
  "plotly==5.18.0",
  "scikit-image==0.22.0",
  "pyyaml==6.0.1",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
  "matplotlib==3.8.0",
  "einops==0.6.1",
  "imageio==2.30.0",
  "timm==0.9.16",
  "easydict==1.10",
]

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]
