[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smlm-simulator"
version = "0.1"
description = "Geometric deep learning for SMLM"
authors = [
  { name = "Diana Mindroc" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "torchaudio>=2.4.0",
  "numpy>=1.24,<1.27",
  "scipy>=1.9.1",
  "pandas>=1.5.3",
  "matplotlib>=3.7.1",
  "plotly>=5.3.1",
  "scikit-image>=0.20.0",
  "scikit-learn>=1.2.2",
  "pyyaml>=6.0",
  "einops>=0.6.1",
  "timm>=0.9.2",
  "imageio>=2.30.0",
  "easydict>=1.10",
  "tqdm>=4.65.0",
  "requests>=2.29.0",
  "protobuf>=4.23.2",
  "hdbscan>=0.8.33",
  "fvcore>=0.1.5.post20221221",
  "iopath>=0.1.9",
  "open3d>=0.17.0",
  "dash>=2.10.2",
  "dash-core-components>=2.0.0",
  "dash-html-components>=2.0.0",
  "dash-table>=5.0.0",
  "seaborn>=0.12.2",
  "wandb>=0.15.3",
  "huggingface-hub>=0.14.1",
  "packaging>=23.1",
]

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]
